Fixed width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,10 @@ footer {
 #love {
 	transform: translateX(-60%);
 }
+
+@media (max-width: 500px) {
+	main {
+		width: 90vw;
+	}
+	
+}
